--- a/index.html
+++ b/index.html
@@ -167,6 +167,21 @@ fbq('track', 'PageView');
       <p style="width:100%;padding:0 5%;margin:3% 0;"><img src="img/dots.svg" width="93%"></p>
       <p class="money-pay"><strong>Додаткові 250+ грн</strong></p>
             <img width="150" height="150"  preload="none"  src="img/UtyaDuck-512px-18.gif" alt="">
+            ✅ Отримайте 300 ₴ від SportBank 
+
+🟠 Оформлюйте карту від SportBank з кредитним лімітом і отримайте ваші 300 ₴
+
+☝️ Якщо ви оформите картку без кредитного ліміту, то 300 ₴ не нарахуються, БУДЬТЕ УВАЖНІ!
+
+🔥 Реєстрація доступна від 18 років. Через дію все робиться швидко 🇺🇦
+
+Р.S. Перевірено 😉
+
+📲 Посилання для оформлення картки:
+
+Google Play - https://sportbank.ua/r/?ref=aPHDhK8K
+
+App Store - https://sportbank.ua/r/?ref=aPHDhK8K
       <script async src="https://telegram.org/js/telegram-widget.js?21" data-telegram-post="rent_google_news/12" data-width="100%"></script>
 <script async src="https://telegram.org/js/telegram-widget.js?21" data-telegram-post="rent_google_news/3" data-width="100%"></script>
  <h4 class="h2-bold">Зареєструйтесь в цих банках і отримайте свою винагороду!</h4>
